# bookarchiver

./: Cargo.toml  LICENSE  README.md  REFACTORING_GUIDE.md  proguard-rules.pro
kotlin/bookarchiver/: BookException.kt  BookFormat.kt  BookReader.kt  BookWriter.kt
src/: error.rs  lib.rs  reader.rs  writer.rs
